# redactor_ai

./: .env  logger.py  main.py  pyproject.toml  requirements.txt
alembic/versions/: 2024_11_17_2009-d1acd8030258_init.py  2025_06_18_1218-f8a433be1115_create_new_columns.py  2025_07_21_1429-517145ceb442_add_ai_configuration_tables.py
core/: config.py
core/models/: __init__.py  admin.py  ai_config.py  article.py  event.py  folder.py  publication.py  publication_schedule.py  stop_words.py  thematic_block.py
core/repositories/: admin.py  ai_config.py  article.py  base.py  event.py  folder.py  publication.py  publication_schedule.py  stop_words.py  thematic_block.py
routers/: admin.py  ai_admin.py  command.py  events.py  publication.py  publication_schedule.py  statistics.py  stop_words.py  thematic_blocks.py
utils/: AI.py  account_manager.py  adm.py  ai_manager.py  config_watcher.py  create_keyboard.py  events.py  populate_ai_data.py  rerate.py  shedule.py  telegram.py  telethon.py  text_corrector.py
