[tool.poetry]
name = "editor-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
logger = "^1.4"
black = "^24.8.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
aiosqlite = "^0.20.0"
rapidfuzz = "^3.10.0"
telethon = "^1.37.0"
apscheduler = "^3.10.4"
scikit-learn = "^1.5.2"
spacy = "^3.8.2"
sentence-transformers = "^3.2.1"
nltk = "^3.9.1"
emoji = "^2.14.0"
demoji = "^1.1.0"
mistralai = "^1.1.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
